; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/ecpglib/extr_prepare.c_HashStmt.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/ecpglib/extr_prepare.c_HashStmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stmtCacheNBuckets = common dso_local global i8 0, align 1
@stmtCacheEntPerBucket = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @HashStmt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @HashStmt(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8, align 1
  %8 = alloca i8, align 1
  store i8* %0, i8** %2, align 8
  %9 = load i8*, i8** %2, align 8
  %10 = call i32 @strlen(i8* %9)
  store i32 %10, i32* %6, align 4
  store i32 50, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* %6, align 4
  %13 = icmp sgt i32 %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %1
  %15 = load i32, i32* %6, align 4
  store i32 %15, i32* %5, align 4
  br label %16

16:                                               ; preds = %14, %1
  store i8 0, i8* %7, align 1
  store i32 0, i32* %3, align 4
  br label %17

17:                                               ; preds = %52, %16
  %18 = load i32, i32* %3, align 4
  %19 = load i32, i32* %5, align 4
  %20 = icmp slt i32 %18, %19
  br i1 %20, label %21, label %55

21:                                               ; preds = %17
  %22 = load i8, i8* %7, align 1
  %23 = zext i8 %22 to i32
  %24 = load i8*, i8** %2, align 8
  %25 = load i32, i32* %3, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i8, i8* %24, i64 %26
  %28 = load i8, i8* %27, align 1
  %29 = zext i8 %28 to i32
  %30 = add nsw i32 %23, %29
  %31 = trunc i32 %30 to i8
  store i8 %31, i8* %7, align 1
  %32 = load i8, i8* %7, align 1
  %33 = zext i8 %32 to i32
  %34 = shl i32 %33, 13
  %35 = trunc i32 %34 to i8
  store i8 %35, i8* %7, align 1
  %36 = load i8, i8* %7, align 1
  %37 = zext i8 %36 to i32
  %38 = call zeroext i8 @UINT64CONST(i32 0)
  %39 = zext i8 %38 to i32
  %40 = and i32 %37, %39
  %41 = ashr i32 %40, 32
  %42 = trunc i32 %41 to i8
  store i8 %42, i8* %8, align 1
  %43 = load i8, i8* %7, align 1
  %44 = zext i8 %43 to i32
  %45 = call zeroext i8 @UINT64CONST(i32 -1)
  %46 = zext i8 %45 to i32
  %47 = and i32 %44, %46
  %48 = load i8, i8* %8, align 1
  %49 = zext i8 %48 to i32
  %50 = or i32 %47, %49
  %51 = trunc i32 %50 to i8
  store i8 %51, i8* %7, align 1
  br label %52

52:                                               ; preds = %21
  %53 = load i32, i32* %3, align 4
  %54 = add nsw i32 %53, 1
  store i32 %54, i32* %3, align 4
  br label %17

55:                                               ; preds = %17
  %56 = load i8, i8* %7, align 1
  %57 = zext i8 %56 to i32
  %58 = load i8, i8* @stmtCacheNBuckets, align 1
  %59 = zext i8 %58 to i32
  %60 = srem i32 %57, %59
  store i32 %60, i32* %4, align 4
  %61 = load i32, i32* %4, align 4
  %62 = load i32, i32* @stmtCacheEntPerBucket, align 4
  %63 = mul nsw i32 %61, %62
  %64 = add nsw i32 %63, 1
  ret i32 %64
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local zeroext i8 @UINT64CONST(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
